Cleanup the trace experiments
